--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
 
   </div>
   <script type="text/javascript" src="js/main.js"></script>
+  <button type="button" onclick="update('alphabetic')">Alphabetical</button>
+  <button type="button" onclick="update('ascending')">Ascending</button>
 
 </body>
 </html>
